test/bad/dictionaries/decl05.px

a = [0]
d: {Bool:[Float]} = {false: [0], true: a}
